--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^5.15.15",
     "next": "14.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-github-calendar": "^4.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
