--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "dotenv": "^16.4.5",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
