--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-barcode": "^1.6.1",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
