--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-barcode": "^1.6.1",
